Provide PSD and webfonts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <h1>Good luck!</h1>
       <img src="asset/image/mind-blown.gif">
       <h2>Blow our minds!</h2>
+
+      <h3>Here is some music to get you in the mood:</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/GGXzlRoNtHU" frameborder="0" allowfullscreen></iframe>
     </article>
   </div>
   <script src="bundle.js"></script>
