first commit. Added images in asset

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 </head>
+
 <body>
   <div id="app">
     <article class="content">
       <h1>Good luck!</h1>
-      <img src="asset/image/mind-blown.gif">
+      <img src="asset/images/logo.png">
+      <img src="asset/images/wordmark.png">
       <h2>Blow our minds!</h2>
 
       <h3>Here is some music to get you in the mood:</h3>
