--- a/index.html
+++ b/index.html
@@ -4,24 +4,55 @@
 <!--[if IE 9]><html class="no-js lt-ie10"><![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-  <title>Frontend test</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+    <title>Frontend test</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 </head>
 
 <body>
-  <div id="app">
-    <article class="content">
-      <h1>Good luck!</h1>
-      <img src="asset/images/logo.png">
-      <img src="asset/images/wordmark.png">
-      <h2>Blow our minds!</h2>
+    <div id="app">
+        <article class="fixed">
+            <img src="asset/images/logo.png">
+        </article>
 
-      <h3>Here is some music to get you in the mood:</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GGXzlRoNtHU" frameborder="0" allowfullscreen></iframe>
-    </article>
-  </div>
-  <script src="bundle.js"></script>
+        <article class="content">
+            <section>
+                <img src="asset/images/wordmark.png">
+                <p class="text-main"> Wrewvg </p>
+                <pre class="text-second">
+                  egetg
+                  e3he
+                  46nje
+                  5juhe57
+                  j
+                  t5j
+                  e57j57ej
+                  4e5j54
+                </pre>
+            </section>
+            <section>
+                <img src="asset/images/wordmark.png">
+                <p class="text-main"> Rrtebe </p>
+                <pre class="text-second">
+                  egetg
+                  e3he
+                  46nje
+                  5juhe57
+                  j
+                  t5j
+                  e57j57ej
+                  4e5j54
+                </pre>
+            </section>
+            <section>
+                <img src="asset/images/wordmark.png">
+            </section>
+            <section>
+                <img src="asset/images/wordmark.png">
+            </section>
+        </article>
+    </div>
+    <script src="bundle.js"></script>
 </body>
 </html>
