added grid. added multilayer parallax effect.

--- a/index.html
+++ b/index.html
@@ -49,43 +49,48 @@
             </footer>
         </article>
 
-        <article id="content">
-            <section>
-                <img src="asset/images/wordmark.png">
-                <div>
-                    <p class="text-main"> Wrewvg </p>
-                    <div class="text-second">
-                        <p> Lorem ipsum dolor sit amet.</p>
-                        <p> Consectetur adipiscing elit.</p>
-                        <p> Proin sit amet dolor.</p>
-                    </div>
-                    </pre>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <p class="text-main"> Rrtebe </p>
+        <div class="parallax">
+            <div id="layer-back" class="layer"> </div>
+            <div id="layer-middle" class="layer"> </div>
+            <div id="layer-front" class="layer"> </div>
+            <article id="content" class="layer">
+                <section id="welcome">
                     <img src="asset/images/wordmark.png">
-                    <div class="text-second">
-                        <p> Lorem ipsum dolor sit amet.</p>
-                        <p> Consectetur adipiscing elit.</p>
-                        <p> Proin sit amet dolor.</p>
+                    <div>
+                        <p class="text-main"> Wrewvg </p>
+                        <div class="text-second">
+                            <p> Lorem ipsum dolor sit amet.</p>
+                            <p> Consectetur adipiscing elit.</p>
+                            <p> Proin sit amet dolor.</p>
+                        </div>
+                        </pre>
                     </div>
-                </div>
-            </section>
-            <section>
-                <img src="asset/images/wordmark.png">
-            </section>
-            <section>
-                <img src="asset/images/wordmark.png">
-            </section>
-            <section id="thanks">
-                <div>
-                    <p> THANK </p>
-                    <p> YOU </p>
-                </div>
-            </section>
-        </article>
+                </section>
+                <section id="about">
+                    <div>
+                        <p class="text-main"> Rrtebe </p>
+                        <img src="asset/images/wordmark.png">
+                        <div class="text-second">
+                            <p> Lorem ipsum dolor sit amet.</p>
+                            <p> Consectetur adipiscing elit.</p>
+                            <p> Proin sit amet dolor.</p>
+                        </div>
+                    </div>
+                </section>
+                <section id="work">
+                    <img src="asset/images/wordmark.png">
+                </section>
+                <section id="contact">
+                    <img src="asset/images/wordmark.png">
+                </section>
+                <section id="thanks">
+                    <div>
+                        <p> THANK </p>
+                        <p> YOU </p>
+                    </div>
+                </section>
+            </article>
+        </div>
     </div>
     <script src="bundle.js"></script>
 </body>
