positioned and sized container elements for content and added some (placeholder) content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <article id="fixed">
             <img id="logo" src="asset/images/logo.png">
-            <menu>
+            <nav id="menu">
                 <table>
                         <tr>
 <!-- todo: navigation text should be numbered and put in td automatically -->
@@ -38,8 +38,9 @@
                         <td> Contact </td>
                     </tr>
                 </table>
-            </menu>
-            <footer>
+            </nav>
+
+            <footer class="row">
                 <p id="copyright" class="text-main"> &copy; 2016 - ALL RIGHTS RESERVED </p>
                 <div id="accounts">
                     <img src="asset/images/logo-facebook.png">
@@ -55,21 +56,22 @@
             <div id="layer-front" class="layer"> </div>
             <article id="content" class="layer">
                 <section id="welcome">
-                    <img src="asset/images/wordmark.png">
-                    <div>
-                        <p class="text-main"> Wrewvg </p>
-                        <div class="text-second">
-                            <p> Lorem ipsum dolor sit amet.</p>
-                            <p> Consectetur adipiscing elit.</p>
-                            <p> Proin sit amet dolor.</p>
+                    <div class="row">
+                        <img src="asset/images/wordmark.png">
+                        <div>
+                            <p class="text-main"> Wrewvg </p>
+                            <div class="text-second">
+                                <p> Lorem ipsum dolor sit amet.</p>
+                                <p> Consectetur adipiscing elit.</p>
+                                <p> Proin sit amet dolor.</p>
+                            </div>
+                            </pre>
                         </div>
-                        </pre>
                     </div>
                 </section>
                 <section id="about">
                     <div>
                         <p class="text-main"> Rrtebe </p>
-                        <img src="asset/images/wordmark.png">
                         <div class="text-second">
                             <p> Lorem ipsum dolor sit amet.</p>
                             <p> Consectetur adipiscing elit.</p>
